--- a/css/foundation.css
+++ b/css/foundation.css
@@ -1085,6 +1085,7 @@ select {
 button, .button {
   border-style: solid;
   border-width: 0px;
+  box-shadow: 0 1px 0 rgba(255, 255, 255, 0.5) inset;
   cursor: pointer;
   font-family: "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif;
   font-weight: normal;
@@ -1118,13 +1119,13 @@ button, .button {
     button.secondary:hover, button.secondary:focus, .button.secondary:hover, .button.secondary:focus {
       color: #333333; }
   button.success, .button.success {
-    background-color: #43ac6a;
-    border-color: #007095;
+    background-color: #5da423; /*#43ac6a;*/
+    border-color: #457a1a; /*#007095;*/
     color: white; }
     button.success:hover, button.success:focus, .button.success:hover, .button.success:focus {
-      background-color: #007095; }
+      background-color: #FF00A8; /*#007095;*/ }
     button.success:hover, button.success:focus, .button.success:hover, .button.success:focus {
-      color: white; }
+      color: black;/*white;*/ }
   button.alert, .button.alert {
     background-color: #f04124;
     border-color: #007095;
